--- a/Energy.App.Standalone/Features/Analysis/HeatingMeterAnalysisPage.razor
+++ b/Energy.App.Standalone/Features/Analysis/HeatingMeterAnalysisPage.razor
@@ -1,9 +1,18 @@
 ﻿@page "/HeatingMeter/{MeterTypeName}"
 @inherits FluxorComponent
+@inject IState<UserLockState> UserLockState
 
 <ExtendedPageTitle>@MeterTypeName Analysis</ExtendedPageTitle>
 
-@if (_parametersSet)
+@if (UserLockState.Value.LockingOrLocked)
+{
+    <MudPaper Elevation="2" Class="mt-5 mb-10">
+        <MudText Typo="Typo.body1" Align="Align.Center" Class="fw-bolder">
+            Setup Data is Locked
+        </MudText>
+    </MudPaper>
+}
+else if (_parametersSet)
 {
     <MeterAnalysisTemplate MeterType="_meterType" PrimaryHeatSource="true">
         <EnergyChart>
