--- a/Energy.App.Standalone/Pages/HtmlContentFiles/TermsAndConditionsContents.razor
+++ b/Energy.App.Standalone/Pages/HtmlContentFiles/TermsAndConditionsContents.razor
@@ -18,6 +18,13 @@
         <li>Violate the intellectual property rights of any Third Party to the Site;</li>
         <li>Act in any way that could be considered fraudulent;</li>
         <li>Abuse of Third-Party free-to-consumer APIs, including, but not limited to, n3rgy.com, open-meteo.com, postcodes.io;</li>
+        <li>Attempt to use any Third-Party free-to-consumer APIs, including, but not limited to, n3rgy.com, open-meteo.com, postcodes.io, to gain access to any data you do not have the legal right to access, including, but not limited to: 
+            <ol>
+                <li>The historical energy and tariff data of previous residents of your property, or at any time when you were not a legal resident.</li>
+                <li>Residents or owners of other properties who have not explicitly granted you their consent to access their data. If consent is given to access data on behalf of others, it must be obtained following all due processes and legal requirements. Further guidance is available from the ICO: <a href="https://ico.org.uk/for-the-public/does-an-organisation-need-my-consent/">ICO guidance on consent</a></li>
+                <li>Any other data for which you do not have the legal right to access.</li>
+            </ol>
+        </li>
         <li>Violate any conditions of the Apache License 2.0;</li>
         <li>Site imitation, domain spoofing, or any such method that facilitates Phishing attacks;</li>
     </ul>
