--- a/Energy.App.Standalone/Shared/ExtendedPageTitle.razor
+++ b/Energy.App.Standalone/Shared/ExtendedPageTitle.razor
@@ -1,4 +1,5 @@
-﻿<PageTitle>@ChildContent | Explain My Energy</PageTitle>
+﻿@namespace Energy.App.Standalone.Shared
+<PageTitle>@ChildContent | Explain My Energy</PageTitle>
 
 @code {
     [Parameter]
