--- a/Energy.App.Standalone/Shared/NavMenu.razor
+++ b/Energy.App.Standalone/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿@inherits FluxorComponent
+﻿@namespace Energy.App.Standalone.Shared
+@inherits FluxorComponent
 
 <MudPaper Class="py-0" Elevation="0" UserAttributes="@(new() { {"id","main-nav"}, {"role", "navigation" }, {"aria-label", "Main Site Links"}})">
     <MudNavMenu Color="Color.Info" Bordered="true" Class="d-flex flex-column">
