--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -13,13 +13,12 @@
 @using Energy.App.Standalone.Shared
 @using Energy.App.Standalone.PageComponents
 @using Energy.App.Standalone.PageComponents.Storage
+@using Energy.App.Standalone.PageComponents.Storage.StorageModels
 @using Energy.App.Standalone.Services;
 @using Energy.App.Standalone.Services.FluxorPersist
 @using Energy.App.Standalone.Services.FluxorPersist.Demo
 @using Energy.App.Standalone.Services.FluxorPersist.Demo.Interfaces
 @using Energy.App.Standalone.Services.DocSnippets;
-
-
 @using Energy.Shared;
 @using Microsoft.AspNetCore.Components
 @using MudBlazor
