--- a/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
+++ b/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
@@ -1,19 +1,17 @@
 ﻿@inherits FluxorComponent
-@implements IAsyncDisposable
 @inject IJSRuntime JsRuntime
 @inject ILogger<EnergyTemperatureChart> Logger
-
-
-
 
 <div class="d-flex flex-column align-center">
     <div class="d-flex flex-row align-center justify-center">
         <MudText Typo="Typo.h4" Align="Align.Center" Class="d-flex eme-focus">@MeterType Meter Analysis</MudText>
         <DocTooltipIcon DocSnippetHeader="Temperature-dependent Chart"
-                        DocSnippetType="DocSnippetType.ChartTemperatureDependent" IconTitle="Help for the Temperature-dependent Chart" />
+            DocSnippetType="DocSnippetType.ChartTemperatureDependent"
+            IconTitle="Help for the Temperature-dependent Chart" />
     </div>
     <MudPaper Class="d-flex" Elevation="0">
-        <MudLink Href="https://open-meteo.com/" Typo="Typo.body2" Target="_blank">Weather data by Open-Meteo.com <i class="fa">&#xf08e;</i></MudLink>
+        <MudLink Href="https://open-meteo.com/" Typo="Typo.body2" Target="_blank">Weather data by Open-Meteo.com <i
+                class="fa">&#xf08e;</i></MudLink>
     </MudPaper>
 </div>
 
@@ -62,16 +60,20 @@
         switch (MeterType)
         {
             case MeterType.Electricity:
-                SubscribeToAction<ElectricityAnalysisOptionsSetHighlightRangeAction>(action => OnHighlightRangeHandler(action.Start, action.End));
+                SubscribeToAction<ElectricityAnalysisOptionsSetHighlightRangeAction>(action => OnHighlightRangeHandler(action.Start,
+                action.End));
                 SubscribeToAction<ElectricityAnalysisOptionsRemoveHighlightRangeAction>(_ => OnRemoveHighlightRangeHandler());
                 SubscribeToAction<ElectricityAnalysisOptionsShowCostAction>(c => OnToggledCostChangedHandler(c.ShowCost));
-                SubscribeToAction<ElectricityAnalysisOptionsUseHistoricalForecastAction>(c => OnUseHistoricalForecastHandler(c.UseHistoricalForecast));
+                SubscribeToAction<ElectricityAnalysisOptionsUseHistoricalForecastAction>(c =>
+                OnUseHistoricalForecastHandler(c.UseHistoricalForecast));
                 break;
             case MeterType.Gas:
-                SubscribeToAction<GasAnalysisOptionsSetHighlightRangeAction>(action => OnHighlightRangeHandler(action.Start, action.End));
+                SubscribeToAction<GasAnalysisOptionsSetHighlightRangeAction>(action => OnHighlightRangeHandler(action.Start,
+                action.End));
                 SubscribeToAction<GasAnalysisOptionsRemoveHighlightRangeAction>(_ => OnRemoveHighlightRangeHandler());
                 SubscribeToAction<GasAnalysisOptionsShowCostAction>(c => OnToggledCostChangedHandler(c.ShowCost));
-                SubscribeToAction<GasAnalysisOptionsUseHistoricalForecastAction>(c => OnUseHistoricalForecastHandler(c.UseHistoricalForecast));
+                SubscribeToAction<GasAnalysisOptionsUseHistoricalForecastAction>(c =>
+                OnUseHistoricalForecastHandler(c.UseHistoricalForecast));
                 break;
 
             default:
@@ -83,12 +85,14 @@
 
     DateTime _latestReadingTime;
 
-    private List<ChartDailyForecastReading> GetChartDailyForecastReadings(DateTime latestReadingTime, ImmutableList<DailyCostedReading> forecastDailyCosts)
+    private List<ChartDailyForecastReading> GetChartDailyForecastReadings(DateTime latestReadingTime,
+    ImmutableList<DailyCostedReading> forecastDailyCosts)
     {
         var latestReadingWeekStart = latestReadingTime.eStartOfWeek(DayOfWeek.Monday);
 
         var lastDate = forecastDailyCosts.Last().UtcTime.eStartOfWeek(DayOfWeek.Monday).AddDays(-1);
-        var applicableForecastCosts = forecastDailyCosts.Where(c => c.UtcTime >= latestReadingWeekStart && c.UtcTime <= lastDate);
+        var applicableForecastCosts = forecastDailyCosts.Where(c => c.UtcTime >= latestReadingWeekStart && c.UtcTime <=
+        lastDate);
 
         var forecastChartReadings = applicableForecastCosts.Select(Mapping.MapToChartReading).ToList();
         return forecastChartReadings;
@@ -96,32 +100,34 @@
 
     protected override void OnAfterRender(bool firstRender)
     {
-        if (firstRender)
+        try
         {
-            var costedReadings = MeterType switch
+            if (firstRender)
             {
-                MeterType.Gas => GasReadingsState.Value.CostedReadings,
-                MeterType.Electricity => ElectricityReadingsState.Value.CostedReadings,
-                _ => throw new ArgumentOutOfRangeException()
-            };
+                var costedReadings = MeterType switch
+                {
+                    MeterType.Gas => GasReadingsState.Value.CostedReadings,
+                    MeterType.Electricity => ElectricityReadingsState.Value.CostedReadings,
+                    _ => throw new ArgumentOutOfRangeException()
+                };
 
-            var latestReading = costedReadings.Last();
-            var firstReading = costedReadings.First();
+                var latestReading = costedReadings.Last();
+                var firstReading = costedReadings.First();
 
-            var chartReadings = costedReadings.Select(Mapping.MapToChartReading).ToList();
+                var chartReadings = costedReadings.Select(Mapping.MapToChartReading).ToList();
 
-            var forecastReadingsState = AnalysisOptions.Value[MeterType].UseHistoricalForecast ?
-                        HistoricalForecastState.Value[MeterType]
-                        : HeatingForecastState.Value.ForecastDailyCosts;
+                var forecastReadingsState = AnalysisOptions.Value[MeterType].UseHistoricalForecast ?
+                HistoricalForecastState.Value[MeterType]
+                : HeatingForecastState.Value.ForecastDailyCosts;
 
-            var forecastChartReadings = GetChartDailyForecastReadings(latestReading.UtcTime, forecastReadingsState);
+                var forecastChartReadings = GetChartDailyForecastReadings(latestReading.UtcTime, forecastReadingsState);
 
-            var firstReadingTicks = firstReading.UtcTime.eToUnixTicksNoOffset();
-            var latestReadingTicks = chartReadings.Last().DateTicks;
+                var firstReadingTicks = firstReading.UtcTime.eToUnixTicksNoOffset();
+                var latestReadingTicks = chartReadings.Last().DateTicks;
 
-            var temperatureIconPoints = WeatherState.Value.WReadings
+                var temperatureIconPoints = WeatherState.Value.WReadings
                 .Where(c => c.Utc.eToUnixTicksNoOffset() >= firstReadingTicks
-                        && c.Utc.eToUnixTicksNoOffset() <= latestReadingTicks)
+                && c.Utc.eToUnixTicksNoOffset() <= latestReadingTicks)
                 .Select(c => new TemperaturePoint()
                     {
                         DateTicks = c.Utc.eToUnixTicksNoOffset(),
@@ -131,32 +137,38 @@
 
                     }).ToList();
 
-            temperatureIconPoints.AddRange(HeatingForecastState.Value.ForecastWeatherReadings);
+                temperatureIconPoints.AddRange(HeatingForecastState.Value.ForecastWeatherReadings);
 
-            bool highlightSet = AnalysisOptions.Value[MeterType].HighlightSet;
-            var meterChartProfile = new MeterChartProfile()
-                {
-                    ShowCost = AnalysisOptions.Value[MeterType].ShowCost,
-                    GlobalId = MeterGlobalId,
-                    LatestReading = latestReadingTicks,
-                    MostRecentWeekStart = latestReadingTicks,
-                    ProfileStart = chartReadings.First().DateTicks,
-                    OneMonthInTheFuture = latestReading.UtcTime.AddMonths(1).eToUnixTicksNoOffset(),
-                    ProfileEnd = temperatureIconPoints.Last().DateTicks,
-                    ChartReadings = chartReadings,
-                    ChartDailyForecastReadings = forecastChartReadings,
-                    HighlightStart = highlightSet ? AnalysisOptions.Value[MeterType].HighlightStart?.eToUnixTicksNoOffset() : null,
-                    HighlightEnd = highlightSet ? AnalysisOptions.Value[MeterType].HighlightEnd?.eToUnixTicksNoOffset() : null,
-                };
+                bool highlightSet = AnalysisOptions.Value[MeterType].HighlightSet;
+                var meterChartProfile = new MeterChartProfile()
+                    {
+                        ShowCost = AnalysisOptions.Value[MeterType].ShowCost,
+                        GlobalId = MeterGlobalId,
+                        LatestReading = latestReadingTicks,
+                        MostRecentWeekStart = latestReadingTicks,
+                        ProfileStart = chartReadings.First().DateTicks,
+                        OneMonthInTheFuture = latestReading.UtcTime.AddMonths(1).eToUnixTicksNoOffset(),
+                        ProfileEnd = temperatureIconPoints.Last().DateTicks,
+                        ChartReadings = chartReadings,
+                        ChartDailyForecastReadings = forecastChartReadings,
+                        HighlightStart = highlightSet ? AnalysisOptions.Value[MeterType].HighlightStart?.eToUnixTicksNoOffset() : null,
+                        HighlightEnd = highlightSet ? AnalysisOptions.Value[MeterType].HighlightEnd?.eToUnixTicksNoOffset() : null,
+                    };
 
-            _latestReadingTime = latestReading.UtcTime;
-
-
-            var jsInProcess = (IJSInProcessRuntime)JsRuntime;
-            jsInProcess.InvokeVoid("ChartFunctions.setChart", $"profile-chart-meter-{MeterGlobalId}", meterChartProfile, temperatureIconPoints);
+                _latestReadingTime = latestReading.UtcTime;
 
 
-            _chartRendered = true;
+                var jsInProcess = (IJSInProcessRuntime)JsRuntime;
+                jsInProcess.InvokeVoid("ChartFunctions.setChart", $"profile-chart-meter-{MeterGlobalId}", meterChartProfile,
+                temperatureIconPoints);
+
+
+                _chartRendered = true;
+            }
+        }
+        catch (Exception ex)
+        {
+            Logger.LogError(ex, ex.Message);
         }
     }
 
@@ -174,10 +186,10 @@
 
             var jsInProcess = (IJSInProcessRuntime)JsRuntime;
             jsInProcess.InvokeVoid(
-                "ChartFunctions.highlightRange",
-                $"profile-chart-meter-{MeterGlobalId}",
-                startTicks,
-                endTicks);
+            "ChartFunctions.highlightRange",
+            $"profile-chart-meter-{MeterGlobalId}",
+            startTicks,
+            endTicks);
         }
         catch (Exception ex)
         {
@@ -210,13 +222,15 @@
             {
                 return;
             }
-            var forecastReadingsState = useHistoricalForecast ? HistoricalForecastState.Value[MeterType] : HeatingForecastState.Value.ForecastDailyCosts;
+            var forecastReadingsState = useHistoricalForecast ? HistoricalForecastState.Value[MeterType] :
+            HeatingForecastState.Value.ForecastDailyCosts;
             var chartForecastReadings = GetChartDailyForecastReadings(_latestReadingTime, forecastReadingsState);
 
             var degreeDifference = AnalysisOptions.Value[MeterType].DegreeDifference;
             var jsInProcess = (IJSInProcessRuntime)JsRuntime;
 
-            jsInProcess.InvokeVoid("ChartFunctions.setForecastSeries", $"profile-chart-meter-{MeterGlobalId}", chartForecastReadings, degreeDifference);
+            jsInProcess.InvokeVoid("ChartFunctions.setForecastSeries", $"profile-chart-meter-{MeterGlobalId}",
+            chartForecastReadings, degreeDifference);
         }
         catch (Exception ex)
         {
@@ -234,16 +248,16 @@
             }
 
             var forecastReadingsState = AnalysisOptions.Value[MeterType].UseHistoricalForecast ?
-                        HistoricalForecastState.Value[MeterType]
-                        : HeatingForecastState.Value.ForecastDailyCosts;
+            HistoricalForecastState.Value[MeterType]
+            : HeatingForecastState.Value.ForecastDailyCosts;
 
             var chartForecastReadings = GetChartDailyForecastReadings(_latestReadingTime, forecastReadingsState);
 
             var jsInProcess = (IJSInProcessRuntime)JsRuntime;
 
             jsInProcess.InvokeVoid("ChartFunctions.setForecastSeries",
-                    $"profile-chart-meter-{MeterGlobalId}",
-                    chartForecastReadings, degreeDifference);
+            $"profile-chart-meter-{MeterGlobalId}",
+            chartForecastReadings, degreeDifference);
         }
         catch (Exception ex)
         {
@@ -270,12 +284,27 @@
         }
     }
 
-    public async ValueTask DisposeAsync()
+    private bool _isDisposed;
+
+    protected override void Dispose(bool isDisposing)
     {
-        base.Dispose();
-
-        await JsRuntime.InvokeVoidAsync("ChartFunctions.dispose", $"profile-chart-meter-{MeterGlobalId}");
-
+        if (!_isDisposed)
+        {
+            if (isDisposing)
+            {
+                try
+                {
+                    var jsInProcess = (IJSInProcessRuntime)JsRuntime;
+                    jsInProcess.InvokeVoid("ChartFunctions.dispose", $"profile-chart-meter-{MeterGlobalId}");
+                    _ready = false;
+                }
+                catch (Exception ex)
+                {
+                    Logger.LogError(ex, ex.Message);
+                }
+            }
+            _isDisposed = true;
+        }
+        base.Dispose(isDisposing);
     }
-
 }
