--- a/Energy.App.Standalone/Features/Setup/Household/Household.razor
+++ b/Energy.App.Standalone/Features/Setup/Household/Household.razor
@@ -23,8 +23,10 @@
                                     @bind-Date:after="@(() => { _openTo = OpenTo.Month; })"
                                     Disabled="@disableInputs"
                                     OpenTo="@_openTo"
+                                    Label="Move-in Date"
                                     AnchorOrigin="Origin.CenterRight"
                                     TransformOrigin="Origin.CenterRight"
+                                    ReadOnly="@_submitting"
                                     Clearable="true"
                                     DisableToolbar="@_disableToolbar"
                                     DateFormat="MMMM yyyy"
@@ -35,6 +37,10 @@
 
                  <div class="my-3 d-flex align-baseline">
                      <MudTextField For="@(() => _householdDetails.IhdMacId)"
+                                   ReadOnly="@_submitting"
+                                   Converter="@uppercaseConverter"
+                                   T="string"
+                                   Label="IHD MAC ID"
                                    @bind-Value="@_householdDetails.IhdMacId" Required Disabled="@(disableInputs)"
                                    Placeholder="IHD MAC ID"></MudTextField>
                      <DocTooltipIcon DocSnippetHeader="In-Home Device MAC ID" DocSnippetType="DocSnippetType.HouseholdIHD" IconTitle="Help for IHD MAC ID" />
@@ -44,6 +50,9 @@
                      <MudAutocomplete @bind-Value="_householdDetails.OutCode"
                                       For="@(() => _householdDetails.OutCode)"
                                       T="OutCode" CoerceText="true"
+                                      ReadOnly="@_submitting"
+                                      Label="Postal Area"
+                                      MaxLength="5"
                                       Clearable="true"
                                       Placeholder="Postal Area"
                                       Culture="@System.Globalization.CultureInfo.InvariantCulture"
@@ -64,18 +73,25 @@
                  </div>
                  <div class="d-flex align-baseline justify-center">
                      <MudRadioGroup Name="Primary Heat Source" T="MeterType" For="@(() => _householdDetails.PrimaryHeatSource)"
-                                    Disabled="@disableInputs" Required @bind-SelectedOption="@_householdDetails.PrimaryHeatSource">
+                                    Disabled="@disableInputs" Required @bind-SelectedOption="@_householdDetails.PrimaryHeatSource" ReadOnly="@_submitting">
                          <MudRadio T="MeterType" Option="MeterType.Gas">Gas</MudRadio>
                          <MudRadio T="MeterType" Option="MeterType.Electricity">Electricity</MudRadio>
                      </MudRadioGroup>
                  </div>
              </MudCardContent>
              <MudCardActions Class="d-flex flex-column align-start ">
-                 <MudButton Class="mx-auto" ButtonType="ButtonType.Submit" Variant="Variant.Filled" Size="Size.Medium" Disabled="@disableInputs" Color="Color.Primary">@_saveButtonText</MudButton>
+                 <MudButton Class="mx-auto" ButtonType="ButtonType.Submit" Variant="Variant.Filled" Size="Size.Medium" Disabled="@(disableInputs || _submitting)" Color="Color.Primary">@_saveButtonText</MudButton>
 
+                    <MudText Class="mx-auto mt-3 fw-bold" Color="Color.Default" hidden="@(!_submitting)">
+                        Saving
+                    </MudText>
                     <MudText Class="mx-auto mt-3 fw-bold" Color="Color.Success" hidden="@(!_submitSuccessful)">
                         <i class="fa-solid fa-check" aria-hidden="true"></i> @_saveResponseMessage
                 </MudText>
+                <MudText Class="mx-auto mt-3 fw-bold" Color="@_weatherLoadingColor" hidden="@(!_loadingWeatherData)">
+                    <i class="fa-solid fa-temperature-half" aria-hidden="true"></i> @weatherDataLoadMessage
+                </MudText>
+
             </MudCardActions>
         </MudCard>
     </EditForm>
@@ -89,11 +105,23 @@
 
     HouseholdDetails _householdDetails = new();
 
+    Converter<string> uppercaseConverter = new Converter<string>
+        {
+            SetFunc = value => value?.ToUpperInvariant(),
+            GetFunc = text => (text ?? "").ToUpperInvariant(),
+        };
+
     string _saveResponseMessage = string.Empty;
+    bool _submitting;
     bool _submitSuccessful;
+    bool _loadingWeatherData;
+    bool _loadingWeatherDataSuccess;
+    string weatherDataLoadMessage = string.Empty;
+
+    Color _weatherLoadingColor = Color.Default;
 
     bool _readyToInteract;
-    private string _saveButtonText;
+    string _saveButtonText;
 
     protected override void OnInitialized()
     {
@@ -102,7 +130,36 @@
 
         SetHouseholdInputs();
         SubscribeToAction<NotifyHouseholdSavedSuccess>(ShowSuccessMessage);
+        SubscribeToAction<EnsureWeatherLoadedAction>((action) =>
+        {
+            _loadingWeatherData = true;
+            _weatherLoadingColor = Color.Default;
+            weatherDataLoadMessage = "Loading Weather Data..";
 
+        });
+        SubscribeToAction<NotifyWeatherLoadingFinished>((action) =>
+        {
+            if (action.Success)
+            {
+                _weatherLoadingColor = Color.Info;
+                weatherDataLoadMessage = "Weather Data Loaded";
+                _loadingWeatherDataSuccess = true;
+            }
+            else
+            {
+                _weatherLoadingColor = Color.Warning;
+                weatherDataLoadMessage = "Weather Data Failed to Load";
+                _loadingWeatherDataSuccess = false;
+            }
+        });
+        SubscribeToAction<SetSetupDataLockedAction>((action) =>
+        {
+            SetHouseholdInputs();
+        });
+        SubscribeToAction<SetSetupDataUnlockedAction>((action) =>
+        {
+            SetHouseholdInputs();
+        });
         _readyToInteract = true;
     }
 
@@ -111,31 +168,18 @@
 
     private HouseholdDetails GetHouseholdDetails()
     {
-        if (!UserLockState.Value.LockingOrLocked)
-        {
-            return new HouseholdDetails()
-                {
-                    IhdMacId = HouseholdState.Value.IhdMacId,
-                    MoveInDate = HouseholdState.Value.MoveInDate,
-                    OutCode = new OutCode() { OutCodeCharacters = HouseholdState.Value.OutCodeCharacters },
-                    PrimaryHeatSource = HouseholdState.Value.PrimaryHeatSource
-                };
-        }
-        else
-        {
-            return new HouseholdDetails()
-                {
-                    IhdMacId = "Locked",
-                    MoveInDate = new DateTime(1900, 1, 1),
-                    OutCode = new OutCode() { OutCodeCharacters = "Locked" },
-                    PrimaryHeatSource = HouseholdState.Value.PrimaryHeatSource
-                };
-        }
+        return new HouseholdDetails()
+            {
+                IhdMacId = UserLockState.Value.LockingOrLocked ? "Locked" : HouseholdState.Value.IhdMacId,
+                MoveInDate = UserLockState.Value.LockingOrLocked ? new DateTime(1900, 1, 1) : HouseholdState.Value.MoveInDate,
+                OutCode = UserLockState.Value.LockingOrLocked ? new OutCode() { OutCodeCharacters = "Locked" } : new OutCode() { OutCodeCharacters = HouseholdState.Value.OutCodeCharacters },
+                PrimaryHeatSource = HouseholdState.Value.PrimaryHeatSource
+            };
     }
     private void SetHouseholdInputs()
     {
         _openTo = HouseholdState.Value.MoveInDate is null ? OpenTo.Year : OpenTo.Month;
-        
+
         _householdDetails = GetHouseholdDetails();
         _saveButtonText = HouseholdState.Value.Saved ? "Update" : "Save";
     }
@@ -163,6 +207,7 @@
 
     private void ShowSuccessMessage(NotifyHouseholdSavedSuccess _)
     {
+        _submitting = false;
         _submitSuccessful = true;
         _saveResponseMessage = "Household Details Saved";
     }
@@ -174,8 +219,16 @@
         public int Height { get; set; }
     }
 
-    private void HandleValidSubmit()
+    private async void HandleValidSubmit()
     {
+        _submitting = true;
+        _submitSuccessful = false;
+        _saveResponseMessage = string.Empty;
+        _loadingWeatherData = false;
+        _loadingWeatherDataSuccess = false;
+
+        await Task.Delay(TimeSpan.FromSeconds(2));
+
         Dispatcher.Dispatch(new HouseholdSubmitSuccessAction(
             _householdDetails.MoveInDate,
             _householdDetails.IhdMacId,
