--- a/Energy.App.Standalone/PageComponents/Storage/LockStorageDialog.razor
+++ b/Energy.App.Standalone/PageComponents/Storage/LockStorageDialog.razor
@@ -1,8 +1,12 @@
-﻿<MudDialog @bind-IsVisible="_opened" Options="DialogOptions" ClassActions="d-flex justify-end"  >
+﻿@inherits FluxorComponent
+
+<MudDialog @bind-IsVisible="_opened" Options="DialogOptions" ClassActions="d-flex justify-end">
     <TitleContent>
         <div class="d-flex justify-end align-baseline">
-            <MudText Typo="Typo.h6" Align="Align.Center" GutterBottom="false" Class="mx-auto fw-bolder" Color="Color.Inherit">Lock Setup Data</MudText>
-            <MudIconButton Color="Color.Inherit" Size="Size.Medium" Title="Close" Class="me-0" OnClick="CloseModal" Disabled="disableClose" >
+            <MudText Typo="Typo.h6" Align="Align.Center" GutterBottom="false" Class="mx-auto fw-bolder pl-10" Color="Color.Inherit">Lock Setup Data</MudText>
+
+            <MudIconButton Color="Color.Inherit" Size="Size.Medium" Title="Close" Class="me-0"
+                            OnClick="CloseModal" DisableElevation="@disableClose" DisableRipple="@disableClose" Disabled="@disableClose">
                 <i class="fa-solid fa-xmark fa-xl" aria-hidden="true"></i>
             </MudIconButton>
         </div>
@@ -11,7 +15,7 @@
         <StorageLock Locking="LockingChange" />
     </DialogContent>
     <DialogActions>
-        <MudButton Variant="Variant.Filled" Size="Size.Small" Color="Color.Default" Class="ma-3" Disabled="disableClose"
+        <MudButton Variant="Variant.Filled" Size="Size.Small" Color="Color.Default" Class="ma-3" Disabled="@disableClose"
                    OnClick="CloseModal">Close</MudButton>
     </DialogActions>
 </MudDialog>
@@ -35,10 +39,10 @@
             CloseButton = false,
             Position = DialogPosition.TopCenter,
             DisableBackdropClick = true,
-            
+
         };
 
-    private void LockingChange(bool locking)
+    private async void LockingChange(bool locking)
     {
         if (locking)
         {
@@ -48,6 +52,7 @@
         {
             disableClose = false;
         }
+        await InvokeAsync(StateHasChanged);
     }
 
     protected override void OnParametersSet()
@@ -63,6 +68,10 @@
     {
         try
         {
+            if (disableClose)
+            {
+                return;
+            }
             _opened = false;
             await OpenChanged.InvokeAsync(false);
         }
