--- a/Energy.App.Standalone/Shared/ShareMenu.razor
+++ b/Energy.App.Standalone/Shared/ShareMenu.razor
@@ -1,4 +1,5 @@
-﻿@using System.Text.Encodings.Web;
+﻿@namespace Energy.App.Standalone.Shared
+@using System.Text.Encodings.Web
 <MudMenu >
     <ActivatorContent>
         <MudIconButton Color="Color.Inherit" Icon="@Icons.Material.Filled.IosShare" />
